5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1592_2425.log
== TEST (2019-03-31 18:06:09) 
-- CODE:
distancia = float(input())
combustivel = float(input())
consumo = (distancia / combustivel)
print(round(consumo, 2), "km/l")
-- OUTPUT:
14.29 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:06:12) 
-- CODE:
distancia = float(input())
combustivel = float(input())
consumo = (distancia / combustivel)
print(round(consumo, 2), "km/l")
-- EXECUTION TIME:
0.166177
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.29 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.12 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.8 km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:06:31) 
-- CODE:
distancia = float(input())
combustivel = float(input())
consumo = (distancia / combustivel)
print(round(consumo, 2), ("km/l"))
-- EXECUTION TIME:
0.192145
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.29 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.12 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.8 km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:06:34) 
-- CODE:
distancia = float(input())
combustivel = float(input())
consumo = (distancia / combustivel)
print(round(consumo, 2), ("km/l"))
-- EXECUTION TIME:
0.17136
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.29 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.12 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.8 km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:07:22) 
-- CODE:
distancia = float(input())
combustivel = float(input())
consumo = (distancia // combustivel)
print(round(consumo, 2), ("km/l"))
-- EXECUTION TIME:
0.1157
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.0 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.0 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.0 km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:08:00) 
-- CODE:
distancia = float(input())
combustivel = float(input())
consumo = (distancia // combustivel)
print(round(consumo, 2,)"km/l")
-- EXECUTION TIME:
0.199145
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    print(round(consumo, 2,)"km/l")
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:08:16) 
-- CODE:
distancia = float(input())
combustivel = float(input())
consumo = (distancia // combustivel)
print(round(consumo, 3)"km/l")
-- EXECUTION TIME:
0.20105
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 4
    print(round(consumo, 3)"km/l")
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:08:44) 
-- CODE:
distancia = float(input())
combustivel = float(input())
consumo = (distancia // combustivel)
print(round(consumo, 3), ("km/l")
-- EXECUTION TIME:
0.178449
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 5
    
                                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:09:14) 
-- CODE:
distancia = float(input())
from math import *
combustivel = float(input())
consumo = (distancia // combustivel)
print(round(consumo, 3), ("km/l")
-- EXECUTION TIME:
0.155899
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 6
    
                                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:09:57) 
-- CODE:
distancia = float(input("km"))

combustivel = float(input("l"))
consumo = (distancia / combustivel)
print(round(consumo, 3), ("km/l")
-- EXECUTION TIME:
0.123038
-- ERROR:
  File "/home/codebench/codes/1592/2425/main.py", line 6
    
                                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:41:27) 
-- CODE:
distancia = float(input('distancia percorrida'))
combustivel = float(input('combustivel gasto'))
consumo = distancia / combustivel
print(round(consumo ,3),'km/l')
-- EXECUTION TIME:
0.209996
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
